# LAB6MT

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
Include/: header.hpp  picosha2.hpp
scripts/: checks.sh  hunter-gtest-fix.sh
sources/: source.cpp
